@@ -116,10 +116,10 @@ public:
 };
 
 #ifdef IN_MODULE
-// we are in a module: don't access trace object directly!
+// we are in a module: don't access symbol_table object directly!
 Symbol_Table &get_symbol_table(void);
 #else
-// we are in gpsim: use of get_trace() is recommended,
+// we are in gpsim: use of get_symbol_table() is recommended,
 // even if trace object can be accessed directly.
 extern Symbol_Table symbol_table;
 
