@@ -1,3 +1,7 @@
+2004-06-16 Borut Razem <borut.razem@siol.net>
+	* plat/win32/gpsim.def, gui/gui_src_asm.cc, src/symbol.cc, src/symbol.h:
+	small fixes to enable compilation on MSVC
+
 2004-06-15 Scott Dattalo <scott@dattalo.com>
 	* more pedantic fixes 
 
